monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0277/A0277.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0277;

grammar A0277 {

  abstract A;

  B = A;

}
